--- a/.github/workflows/Auto update packages (old).yml
+++ b/.github/workflows/Auto update packages (old).yml
@@ -7,11 +7,11 @@ name: "Auto update packages (old)"
 on:
   repository_dispatch:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+   # inputs:
+    #  ssh:
+     #   description: 'SSH connection to Actions'
+      #  required: false
+       # default: 'false'
   # schedule:
     # - cron: "0 */4 * * *"
 
