--- a/.github/workflows/Auto update packages.yml
+++ b/.github/workflows/Auto update packages.yml
@@ -11,8 +11,8 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  schedule:
-    - cron: "0 */4 * * *"
+#  schedule:
+#    - cron: "0 */4 * * *"
 env:
   TZ: Asia/Shanghai
 
