--- a/.github/workflows/Close stale issues and Prs.yml
+++ b/.github/workflows/Close stale issues and Prs.yml
@@ -1,7 +1,10 @@
 name: "Close stale issues and PRs"
 on:
-  schedule:
-    - cron: "30 1 * * *"
+  repository_dispatch:
+  workflow_dispatch:
+#on:
+#  schedule:
+#    - cron: "30 1 * * *"
 
 jobs:
   stale:
